# templates-backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.rst  deploy.sh  docker-compose-dev.yaml  docker-compose.yaml  docker.example.env  pyproject.toml
.github/: renovate.json
docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.yaml
docs/: conf.py  db.rst  fastapi.rst  generalities.rst  index.rst
src/: Makefile  alembic.ini  main.py  requirements.txt  settings.example.ini
src/projectname/: helpers.py  projectname.py  settings.py
src/projectname/alembic/: env.py
src/projectname/database/: database.py
src/projectname/graphql/: schema.py  types.py
src/projectname/graphql/mutations/: a.py
src/projectname/graphql/queries/: a.py
src/template/: backend.py  settings.py
src/template/alembic/: env.py
src/template/database/: a.py  database.py
src/template/graphql/: schema.py
src/template/graphql/mutations/: a.py
src/template/graphql/queries/: a.py
src/template/graphql/types/: generated.py  generic.py
src/template/utils/: helpers.py  repeat_every.py  singleton_meta.py
src/tests/: test_fast_api.py  test_graphql.py
